# bot-rust

./: .env  .gitignore  Cargo.toml  README.md
src/: handler.rs  main.rs
src/commands/: mod.rs  ping.rs  say.rs  userinfo.rs
src/events/: message.rs  ready.rs
