[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = ["client", "gateway", "framework", "standard_framework", "model"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
